--- a/28/style.css
+++ b/28/style.css
@@ -173,23 +173,71 @@ body{
     padding: 0;
 }
 #maindiv2{
-    margin-left: 20%;
-    width: 80%;
+    background-image: url("image/福岡市Ⅰ.jpeg"); 
+    background-size: cover;    
+    background-position: center; 
+    background-attachment: fixed;
+    margin-left: 15%;
+    width: 85%;
     box-sizing: border-box;
+    padding: 20px;
 }
-.sightseeing h1{
+.sightseeingtitle h1{
     width: 20%;
-    margin-left: 45%;
+    margin-left: 30%;
     padding: 10px;
     text-align: center;
-    border: 1px solid gray
+    border: 1px solid gray;
+    box-sizing: border-box;
 }
-.goolemap{
-    width: 30%;
-    height: 30%;
+.sightseeing{
+    color: blue;
+    margin-bottom: 20px;
 }
-.sightseeing img{
-    margin-left: 20%;
-    width: 40%;
-    
+.sightseeing h1{
+    color: white;
+}
+.sightseeing-item{
+    background-color: rgba(186, 186, 194, 0.5);
+    border-radius: 10px;
+    border: 10px solid gray;
+    margin-bottom: 20px;
+}
+#maindiv3{
+    width: 80%;
+    box-sizing: border-box;
+    padding: 10px;
+}
+.gamen1 img{
+    width: 50%;
+    margin-left: 15%;
+    padding-left: 50%;
+    padding-right: 50%;
+    border-radius: 10px;
+}
+.footer-icons {
+    background-color: black;
+    width: 70%;
+    margin-left: 15%;
+    padding-left: 10%;
+    position: fixed;
+    bottom: 2px;
+    display: flex;
+    justify-content: space-between;
+}
+.footer-icons2 {
+    background-color: black;
+    width: 70%;
+    margin-left: 15%;
+    padding-left: 10%;
+    position: fixed;
+    bottom: 30px;
+    display: flex;
+    justify-content: space-between;
+}
+.footer-icons img {
+    height: 50px;
+}
+.footer-icons2 {
+    height: 50px;
 }
