--- a/28/style.css
+++ b/28/style.css
@@ -4,9 +4,8 @@ body{
     background-color:white ;
 }
 #title-nav{
-    background-color: #ffc0cb;
-    color: #bdb76b;
-    padding: 10px;
+    background-color: #4169e1;
+    padding: 20px;
     width: 100%;
 }
 #title-nav ul{
@@ -16,15 +15,15 @@ body{
     display: flex;
 }
 #title-nav a{
-    color: #bd7093;
+    color: white;
     text-decoration: none;
-    padding: 10px;
+    padding: 20px;
 }
 #title-nav a:hover{
-    background-color: #ffe4e1;
+    background-color:#00bfff;
 }
 .profiletitle h1{
-    background-color: #bd7093;
+    background-color:#0000ff ;
     color: white;
     width: 15%;
     height: 30%;
@@ -37,21 +36,21 @@ body{
 .profile{
    display: flex;
    justify-content: space-around;
-   width: 40%;
+   width: 50%;
    margin-left: auto;
    margin-right: auto;
 }
 .profile1 h3{
-    background-color: #ffe4e1;
+    background-color: #1e90ff;
     color: white;
-    width: 30%;
-    height: 10%;
     text-align: center;
-    border-radius: 20px;
+    width: 60%;
+    height: 10%;
+    border-radius: 15px;
     box-sizing: border-box;
 }
 .profile1 p{
-    color: #ffc0cb;
+    color: #87cefa;
     box-sizing: border-box;
 }
 .profile1 img{
@@ -65,7 +64,7 @@ body{
     margin-right: auto;
 }
 .profile1-1 h3{
-    background-color: #ffe4e1;
+    background-color: #1e90ff;
     color: white;
     text-align: center;
     width: 130%;
@@ -74,10 +73,10 @@ body{
     box-sizing: border-box;
 }
 .profile1-1 p{
-    color: #ffc0cb;
+    color: #87cefa;
 }
 .profile1-2 h3{
-    background-color: #ffe4e1;
+    background-color: #1e90ff;
     color: white;
     text-align: center;
     width: 120%;
@@ -86,14 +85,14 @@ body{
     box-sizing: border-box;
 }
 .profile1-2 p{
-    color: #ffc0cb;
+    color: #87cefa;
     text-align: center;
 }
 .profile-coment{
     width: 35%;
-    border: 1px solid palevioletred;
+    border: 3px solid #87cefa;
     box-shadow: 1px 1px 1px whitesmoke;
-    border-radius: 10px;
+    border-radius: 20px;
     margin-top: 20px;
     margin-left: auto;
     margin-right: auto;
@@ -101,8 +100,12 @@ body{
 .profile-coment p{
     text-align: center;
 }
+.footer{
+   text-align: center;
+   padding: 30px;
+}
 #sidediv{
-    background-color: #ffc0cb;
+    background-color: #4169e1;
     position: fixed;
     left: 0;
     height: 100%;
@@ -125,10 +128,29 @@ body{
     padding-right: 20px;
     border-radius: 5px;
 }
-#sidediv a{
+#sidediv a {
     text-decoration: none;
     color: white;
+    position: relative;
+    display: inline-block;
 }
+
+#sidediv li a::after {
+  content: "";
+  position: absolute;
+  left: 50%;
+  bottom: 0;
+  width: 0;
+  height: 4px;
+  background-color: #007BFF;
+  transition: all 0.3s ease;
+  transform: translateX(-50%);
+}
+
+#sidediv li a:hover::after {
+  width: 100%;
+}
+
 #maindiv{
     margin-left: 20%;
     width: 80%;
@@ -139,6 +161,7 @@ body{
 .item{
     width: 60%;
     border: 1px solid gray;
+    border-radius: 5px;
     padding: 20px;
     box-sizing: border-box;
     text-align: center;
@@ -146,7 +169,7 @@ body{
     margin-right: 30px;
 }
 .item h4{
-    background-color: #bd7093;
+    background-color:  #1e90ff;
 }
 .item img{
     width: 50%;
@@ -154,12 +177,12 @@ body{
 }
 #backbotton{
     position: fixed;
-    bottom: 40px;
+    bottom: 30px;
     padding-top: 10px;
     padding-bottom: 10px;
     padding-left: 20px;
     padding-right: 20px;
-    background-color: pink;
+    background-color: #87cefa;
     border: none;
     margin-left: 65%;
 }
@@ -183,25 +206,22 @@ body{
     padding: 20px;
 }
 .sightseeingtitle h1{
-    width: 20%;
+    background-color: rgba(186, 186, 194, 0.5);
+    color: green;
+    width: 40%;
     margin-left: 30%;
     padding: 10px;
     text-align: center;
-    border: 1px solid gray;
     box-sizing: border-box;
 }
-.sightseeing{
-    color: blue;
-    margin-bottom: 20px;
-}
-.sightseeing h1{
-    color: white;
-}
 .sightseeing-item{
-    background-color: rgba(186, 186, 194, 0.5);
-    border-radius: 10px;
-    border: 10px solid gray;
+    background-color: rgba(255, 255, 255, 0.5);
+    border-radius: 5px;
+    border: 2px solid black;
     margin-bottom: 20px;
+}
+.sightseeing-item img{
+    width: 20%;
 }
 #maindiv3{
     width: 80%;
