--- a/28/style.css
+++ b/28/style.css
@@ -4,8 +4,9 @@ body{
     background-color:white ;
 }
 #title-nav{
-    background-color: #4169e1;
-    padding: 20px;
+    background-color: #ffc0cb;
+    color: #bdb76b;
+    padding: 10px;
     width: 100%;
 }
 #title-nav ul{
@@ -15,15 +16,15 @@ body{
     display: flex;
 }
 #title-nav a{
-    color: white;
+    color: #bd7093;
     text-decoration: none;
-    padding: 20px;
+    padding: 10px;
 }
 #title-nav a:hover{
-    background-color:#00bfff;
+    background-color: #ffe4e1;
 }
 .profiletitle h1{
-    background-color:#0000ff ;
+    background-color: #bd7093;
     color: white;
     width: 15%;
     height: 30%;
@@ -36,21 +37,21 @@ body{
 .profile{
    display: flex;
    justify-content: space-around;
-   width: 50%;
+   width: 40%;
    margin-left: auto;
    margin-right: auto;
 }
 .profile1 h3{
-    background-color: #1e90ff;
+    background-color: #ffe4e1;
     color: white;
-    text-align: center;
-    width: 60%;
+    width: 30%;
     height: 10%;
-    border-radius: 15px;
+    text-align: center;
+    border-radius: 20px;
     box-sizing: border-box;
 }
 .profile1 p{
-    color: #87cefa;
+    color: #ffc0cb;
     box-sizing: border-box;
 }
 .profile1 img{
@@ -64,7 +65,7 @@ body{
     margin-right: auto;
 }
 .profile1-1 h3{
-    background-color: #1e90ff;
+    background-color: #ffe4e1;
     color: white;
     text-align: center;
     width: 130%;
@@ -73,10 +74,10 @@ body{
     box-sizing: border-box;
 }
 .profile1-1 p{
-    color: #87cefa;
+    color: #ffc0cb;
 }
 .profile1-2 h3{
-    background-color: #1e90ff;
+    background-color: #ffe4e1;
     color: white;
     text-align: center;
     width: 120%;
@@ -85,14 +86,14 @@ body{
     box-sizing: border-box;
 }
 .profile1-2 p{
-    color: #87cefa;
+    color: #ffc0cb;
     text-align: center;
 }
 .profile-coment{
     width: 35%;
-    border: 3px solid #87cefa;
+    border: 1px solid palevioletred;
     box-shadow: 1px 1px 1px whitesmoke;
-    border-radius: 20px;
+    border-radius: 10px;
     margin-top: 20px;
     margin-left: auto;
     margin-right: auto;
@@ -100,12 +101,8 @@ body{
 .profile-coment p{
     text-align: center;
 }
-.footer{
-   text-align: center;
-   padding: 30px;
-}
 #sidediv{
-    background-color: #4169e1;
+    background-color: #ffc0cb;
     position: fixed;
     left: 0;
     height: 100%;
@@ -128,29 +125,10 @@ body{
     padding-right: 20px;
     border-radius: 5px;
 }
-#sidediv a {
+#sidediv a{
     text-decoration: none;
     color: white;
-    position: relative;
-    display: inline-block;
 }
-
-#sidediv li a::after {
-  content: "";
-  position: absolute;
-  left: 50%;
-  bottom: 0;
-  width: 0;
-  height: 4px;
-  background-color: #007BFF;
-  transition: all 0.3s ease;
-  transform: translateX(-50%);
-}
-
-#sidediv li a:hover::after {
-  width: 100%;
-}
-
 #maindiv{
     margin-left: 20%;
     width: 80%;
@@ -161,7 +139,6 @@ body{
 .item{
     width: 60%;
     border: 1px solid gray;
-    border-radius: 5px;
     padding: 20px;
     box-sizing: border-box;
     text-align: center;
@@ -169,7 +146,7 @@ body{
     margin-right: 30px;
 }
 .item h4{
-    background-color:  #1e90ff;
+    background-color: #bd7093;
 }
 .item img{
     width: 50%;
@@ -177,12 +154,12 @@ body{
 }
 #backbotton{
     position: fixed;
-    bottom: 30px;
+    bottom: 40px;
     padding-top: 10px;
     padding-bottom: 10px;
     padding-left: 20px;
     padding-right: 20px;
-    background-color: #87cefa;
+    background-color: pink;
     border: none;
     margin-left: 65%;
 }
@@ -206,22 +183,25 @@ body{
     padding: 20px;
 }
 .sightseeingtitle h1{
-    background-color: rgba(186, 186, 194, 0.5);
-    color: green;
-    width: 40%;
+    width: 20%;
     margin-left: 30%;
     padding: 10px;
     text-align: center;
+    border: 1px solid gray;
     box-sizing: border-box;
 }
-.sightseeing-item{
-    background-color: rgba(255, 255, 255, 0.5);
-    border-radius: 5px;
-    border: 2px solid black;
+.sightseeing{
+    color: blue;
     margin-bottom: 20px;
 }
-.sightseeing-item img{
-    width: 20%;
+.sightseeing h1{
+    color: white;
+}
+.sightseeing-item{
+    background-color: rgba(186, 186, 194, 0.5);
+    border-radius: 10px;
+    border: 10px solid gray;
+    margin-bottom: 20px;
 }
 #maindiv3{
     width: 80%;
